[add]jvm补充2