@@ -1,7 +1,7 @@
 ### problems list
 1. asm
 2. 字节码相关
-3. gc cms g1 常用
+3. cms
    说一下 JVM 的主要组成部分？及其作用？
 4. JVM的回收算法有哪些，优缺点各是什么？新生代和老年代可以只用一个算法吗？
 5. 讲—下JVM的内存区域？Java虚拟机栈内部都有什么东西？问的是栈帧内部
@@ -31,10 +31,11 @@
 26. JVM为什么把堆区进一步的划分
 27. 4. Full GC会在哪些场景发生？
 28. 堆外内存怎么回收的
+29. 三个垃圾回收指标（吞吐量、停顿时间、回收频率）
+30. 常用的一些gc参数
 
 
 
-说一下 JVM 运行时数据区？
 
 什么是双亲委派模型？
 
@@ -64,11 +65,15 @@ Java 中堆和栈有什么区别？
 
 你能保证 GC 执行吗？
 
-常用的一些gc参数
 常用的工具
 ### reference answer
 refer link: https://www.cnblogs.com/chiangchou/p/jvm-2.html#_label2_6
+https://juejin.cn/post/6844904106268557320
+https://blog.csdn.net/lhy18235303007/article/details/115774839
 
+
+
+3.缺点：浮动垃圾，预留空间不足触发并发失败使用serial old进行回收，内存碎片
 24.-Xms(JVM的初始堆内存大小。例如，-Xms512m表示将初始堆内存设置为512MB。),-Xmx(JVM的最大堆内存大小)
 -Xss设置每个线程的栈大小。默认值因平台而异。例如，-Xss256k表示将每个线程的栈大小设置为256KB。
 -XX:+UseParallelGC:启用并行垃圾回收器。并行垃圾回收器可以提高垃圾回收的效率。
@@ -77,4 +82,15 @@ refer link: https://www.cnblogs.com/chiangchou/p/jvm-2.html#_label2_6
 -XX:ParallelGCThreads：设置并行垃圾回收器的线程数。例如，-XX:ParallelGCThreads=4表示将并行垃圾回收器的线程数设置为4。
 25.markword(32bit/64bit),指针（指向对应的Class对象），数组长度
 
+27.永久代空间不足（full gc顺代回收永久代），System.gc可能，老年代空间不足存储大对象，cms导致
+30.cms常用参数：
+-XX:+UseConcMarkSweepGC
+-XX:CMSInitiatingOccupancyFraction=92，老年代使用比例达到后触发full gc
+-XX:+UseCMSInitiatingOccupancyOnly 只使用设定代阈值（CMSInitiatingOccupancyFraction）
+不建议配置上面这个参数，如果不配置，jvm只有第一次使用CMSInitiatingOccupancyFraction，后续使用经验值
+-XX:CMSBootstrapOccupancy=92
+-xx:CMSWaitDuration=2000
+-XX:+UseCMSCompactAtFullCollection（默认开启，在回收时整理，导致stw）
+-XX:CMSFullGCsBeforeCompaction CMS在执行过若干次不整理空间的 Full GC 之后，下一次进入 Full GC 前会先进行碎片整理（默认值为0，表示每次进入 Full GC 时都进行碎片整理
 
+g1常用参数：
